app/globals.css
/* ... */
/* Bloquear scroll del body cuando modal está abierto */
.modal-open {
  overflow: hidden;
}

/* Scroll interno para pantallas grandes */
.internal-scroll {
  overflow-y: auto;
  max-height: 100%;
}

/* Scroll del modal para pantallas pequeñas */
.modal-scroll {
  overflow-y: auto;
}

.my-masonry-grid {
  display: -webkit-box; /* Not needed if autoprefixing */
  display: -ms-flexbox; /* Not needed if autoprefixing */
  display: flex;
  margin-left: -30px; /* gutter size offset */
  width: auto;
}

.my-masonry-grid_column {
  padding-left: 30px; /* gutter size */
  background-clip: padding-box;
}

/* Style your items */
.my-masonry-grid_column > div {
  /* change div to reference your elements you put in <Masonry> */
  background: grey;
  margin-bottom: 30px;
}

/* Scrollbars, sliders, etc. */
input[type="range"]::-webkit-slider-thumb {
  background: var(--primary);
}
input[type="range"]::-moz-range-thumb {
  background: var(--primary);
}
.dark input[type="range"]::-webkit-slider-thumb {
  background: var(--primary-dark);
}
.dark input[type="range"]::-moz-range-thumb {
  background: var(--primary-dark);
}

::-webkit-scrollbar-thumb {
  background: var(--primary);
}
.dark ::-webkit-scrollbar-thumb {
  background: var(--primary-dark);
}

